force-app/main/default/objects/Persona_Access_Mapping__mdt/Persona_Access_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Stores mappings between Personas and their associated permissions/groups.</description>
    <label>Persona Access Mapping</label>
    <pluralLabel>Persona Access Mappings</pluralLabel>
</CustomObject>