force-app/main/default/objects/Persona_Access_Mapping__mdt/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <description>API names of the Type of assignment (Permission Set, Permission Set Group, or Public Group) records separated by a comma (,)</description>
    <label>API Name</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>