force-app/main/default/objects/Persona_Access_Mapping__mdt/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <label>Persona</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Elevated User</fullName>
                <default>true</default>
                <label>Elevated User</label>
            </value>
            <value>
                <fullName>Read-Edit User</fullName>
            </value>
            <value>
                <fullName>Read-Only User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>