force-app/main/default/objects/Persona_Access_Mapping__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of Access assignment</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Group</fullName>
                <default>true</default>
                <label>Group</label>
            </value>
            <value>
                <fullName>PermissionSet</fullName>
            </value>
            <value>
                <fullName>PermissionSetGroup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>